fix: issue with missing border for drawer

--- a/packages/components/src/components/drawer/drawer.scss
+++ b/packages/components/src/components/drawer/drawer.scss
@@ -139,16 +139,27 @@ $spacings: (
 			box-shadow: variables.$db-elevation-md;
 		}
 
+		&:not([data-direction]),
+		&[data-direction="left"] {
+			border-inline-start: component.$component-border;
+		}
+
 		&[data-direction="left"] {
 			@extend %direction-left;
+
+			border-inline-end: component.$component-border;
 		}
 
 		&[data-direction="up"] {
 			@extend %direction-up;
+
+			border-block-start: component.$component-border;
 		}
 
 		&[data-direction="down"] {
 			@extend %direction-down;
+
+			border-block-end: component.$component-border;
 		}
 
 		.db-drawer-header {
